--- a/style.css
+++ b/style.css
@@ -12,6 +12,15 @@ body {
   box-shadow: rgba(27, 31, 35, 0.04) 0px 2px 0px;
 }
 
+#title-input {
+  text-align: center;
+  border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border: none;
+  padding: 10px;
+  margin: 10px;
+}
+
 #add-task-button {
   padding: 20px 100px;
   border-radius: 25px;
