--- a/style.css
+++ b/style.css
@@ -91,6 +91,19 @@ body {
 
 .task-checkbox {
   cursor: pointer;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: inherit;
+  margin: 0;
+  padding: 15px;
+  border: 1px solid rgb(112, 255, 136);
+  transition: 0.1s;
+}
+
+.task-checkbox:checked {
+  box-shadow: inset 0 0 0 4px rgb(94, 94, 94);
+  background-color: rgb(38, 241, 72);
+  scale: 1.1;
 }
 
 .task-title {
@@ -101,12 +114,25 @@ body {
   font-size: 20px;
 }
 
-.hidden {
-  display: none;
+.task-due-date-box,
+.task-priority-box {
+  font-size: 13px;
+  font-weight: bold;
 }
 
 .greyed-out {
   color: rgb(173, 173, 173);
-  font-size: 13px;
-  font-weight: bold;
+}
+
+.hidden {
+  display: none;
+}
+
+.task-completed {
+  background-color: rgb(63, 63, 63);
+}
+
+.scratched {
+  text-decoration: line-through;
+  text-decoration-thickness: 3px;
 }
