--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
   color: rgb(112, 255, 136);
 }
 
+textarea {
+  resize: none;
+}
+
 .container {
   padding: 30px;
 }
@@ -31,7 +35,7 @@ body {
 }
 
 .field {
-  margin: 20px 0;
+  margin-bottom: 20px;
 }
 
 #title-input {
@@ -146,4 +150,61 @@ body {
 .scratched {
   text-decoration: line-through;
   text-decoration-thickness: 3px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.096);
+  backdrop-filter: blur(3px);
+  z-index: 1;
+}
+
+.modal {
+  background-color: rgb(31, 31, 31);
+  max-width: 500px;
+  border: 1px solid grey;
+  padding: 20px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+
+#close-modal-button {
+  border: none;
+  background-color: inherit;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+  transition: 0.3s;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 8px;
+  border-radius: 8px;
+}
+
+#close-modal-button:hover {
+  color: rgb(196, 196, 196);
+}
+
+#submit-task-button {
+  width: 100%;
+  padding: 10px;
+  background-color: rgb(63, 63, 63);
+  color: white;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+}
+
+#submit-task-button:hover {
+  background-color: rgb(70, 70, 70);
 }
