--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ textarea {
   padding-bottom: 30px;
 }
 
+.current-project-title {
+  text-align: center;
+  font-size: 15px;
+  font-weight: bold;
+}
+
 #open-projects-button {
   top: 0;
   left: 0;
